Offline 3 (Parser)/code/y.output
Terminals unused in grammar

   DO
   CHAR
   DOUBLE
   CONTINUE
   ERROR_FLOAT


Grammar

    0 $accept: start $end

    1 start: program

    2 program: program unit
    3        | unit

    4 unit: var_declaration
    5     | func_declaration
    6     | func_definition

    7 func_declaration: type_specifier ID LPAREN parameter_list RPAREN SEMICOLON
    8                 | type_specifier ID LPAREN RPAREN SEMICOLON

    9 func_definition: type_specifier ID LPAREN parameter_list RPAREN compound_statement
   10                | type_specifier ID LPAREN RPAREN compound_statement

   11 parameter_list: parameter_list COMMA type_specifier ID
   12               | parameter_list COMMA type_specifier
   13               | type_specifier ID
   14               | type_specifier

   15 compound_statement: LCURL statements RCURL
   16                   | LCURL RCURL

   17 var_declaration: type_specifier declaration_list SEMICOLON

   18 type_specifier: INT
   19               | FLOAT
   20               | VOID

   21 declaration_list: declaration_list COMMA ID
   22                 | declaration_list COMMA ID LTHIRD CONST_INT RTHIRD
   23                 | ID
   24                 | ID LTHIRD CONST_INT RTHIRD

   25 statements: statement
   26           | statements statement

   27 statement: var_declaration
   28          | expression_statement
   29          | compound_statement
   30          | FOR LPAREN expression_statement expression_statement expression RPAREN statement
   31          | IF LPAREN expression RPAREN statement
   32          | IF LPAREN expression RPAREN statement ELSE statement
   33          | WHILE LPAREN expression RPAREN statement
   34          | PRINTLN LPAREN ID RPAREN SEMICOLON
   35          | RETURN expression SEMICOLON

   36 expression_statement: SEMICOLON
   37                     | expression SEMICOLON

   38 variable: ID
   39         | ID LTHIRD expression RTHIRD

   40 expression: logic_expression
   41           | variable ASSIGNOP logic_expression

   42 logic_expression: rel_expression
   43                 | rel_expression LOGICOP rel_expression

   44 rel_expression: simple_expression
   45               | simple_expression RELOP simple_expression

   46 simple_expression: term
   47                  | simple_expression ADDOP term

   48 term: unary_expression
   49     | term MULOP unary_expression

   50 unary_expression: ADDOP unary_expression
   51                 | NOT unary_expression
   52                 | factor

   53 factor: variable
   54       | ID LPAREN argument_list RPAREN
   55       | LPAREN expression RPAREN
   56       | CONST_INT
   57       | CONST_FLOAT
   58       | variable INCOP
   59       | variable DECOP

   60 argument_list: arguments
   61              | /* empty */

   62 arguments: arguments COMMA logic_expression
   63          | logic_expression


Terminals, with rules where they appear

$end (0) 0
error (256)
IF (258) 31 32
ELSE (259) 32
FOR (260) 30
WHILE (261) 33
DO (262)
INT (263) 18
CHAR (264)
FLOAT (265) 19
DOUBLE (266)
VOID (267) 20
RETURN (268) 35
CONTINUE (269)
PRINTLN (270) 34
ID (271) 7 8 9 10 11 13 21 22 23 24 34 38 39 54
CONST_INT (272) 22 24 56
CONST_FLOAT (273) 57
ERROR_FLOAT (274)
ADDOP (275) 47 50
MULOP (276) 49
INCOP (277) 58
DECOP (278) 59
RELOP (279) 45
ASSIGNOP (280) 41
LOGICOP (281) 43
NOT (282) 51
LPAREN (283) 7 8 9 10 30 31 32 33 34 54 55
RPAREN (284) 7 8 9 10 30 31 32 33 34 54 55
LCURL (285) 15 16
RCURL (286) 15 16
LTHIRD (287) 22 24 39
RTHIRD (288) 22 24 39
COMMA (289) 11 12 21 22 62
SEMICOLON (290) 7 8 17 34 35 36 37
LOWER_THAN_ELSE (291)


Nonterminals, with rules where they appear

$accept (37)
    on left: 0
start (38)
    on left: 1, on right: 0
program (39)
    on left: 2 3, on right: 1 2
unit (40)
    on left: 4 5 6, on right: 2 3
func_declaration (41)
    on left: 7 8, on right: 5
func_definition (42)
    on left: 9 10, on right: 6
parameter_list (43)
    on left: 11 12 13 14, on right: 7 9 11 12
compound_statement (44)
    on left: 15 16, on right: 9 10 29
var_declaration (45)
    on left: 17, on right: 4 27
type_specifier (46)
    on left: 18 19 20, on right: 7 8 9 10 11 12 13 14 17
declaration_list (47)
    on left: 21 22 23 24, on right: 17 21 22
statements (48)
    on left: 25 26, on right: 15 26
statement (49)
    on left: 27 28 29 30 31 32 33 34 35, on right: 25 26 30 31 32 33
expression_statement (50)
    on left: 36 37, on right: 28 30
variable (51)
    on left: 38 39, on right: 41 53 58 59
expression (52)
    on left: 40 41, on right: 30 31 32 33 35 37 39 55
logic_expression (53)
    on left: 42 43, on right: 40 41 62 63
rel_expression (54)
    on left: 44 45, on right: 42 43
simple_expression (55)
    on left: 46 47, on right: 44 45 47
term (56)
    on left: 48 49, on right: 46 47 49
unary_expression (57)
    on left: 50 51 52, on right: 48 49 50 51
factor (58)
    on left: 53 54 55 56 57 58 59, on right: 52
argument_list (59)
    on left: 60 61, on right: 54
arguments (60)
    on left: 62 63, on right: 60 62


state 0

    0 $accept: . start $end

    INT    shift, and go to state 1
    FLOAT  shift, and go to state 2
    VOID   shift, and go to state 3

    start             go to state 4
    program           go to state 5
    unit              go to state 6
    func_declaration  go to state 7
    func_definition   go to state 8
    var_declaration   go to state 9
    type_specifier    go to state 10


state 1

   18 type_specifier: INT .

    $default  reduce using rule 18 (type_specifier)


state 2

   19 type_specifier: FLOAT .

    $default  reduce using rule 19 (type_specifier)


state 3

   20 type_specifier: VOID .

    $default  reduce using rule 20 (type_specifier)


state 4

    0 $accept: start . $end

    $end  shift, and go to state 11


state 5

    1 start: program .
    2 program: program . unit

    INT    shift, and go to state 1
    FLOAT  shift, and go to state 2
    VOID   shift, and go to state 3

    $default  reduce using rule 1 (start)

    unit              go to state 12
    func_declaration  go to state 7
    func_definition   go to state 8
    var_declaration   go to state 9
    type_specifier    go to state 10


state 6

    3 program: unit .

    $default  reduce using rule 3 (program)


state 7

    5 unit: func_declaration .

    $default  reduce using rule 5 (unit)


state 8

    6 unit: func_definition .

    $default  reduce using rule 6 (unit)


state 9

    4 unit: var_declaration .

    $default  reduce using rule 4 (unit)


state 10

    7 func_declaration: type_specifier . ID LPAREN parameter_list RPAREN SEMICOLON
    8                 | type_specifier . ID LPAREN RPAREN SEMICOLON
    9 func_definition: type_specifier . ID LPAREN parameter_list RPAREN compound_statement
   10                | type_specifier . ID LPAREN RPAREN compound_statement
   17 var_declaration: type_specifier . declaration_list SEMICOLON

    ID  shift, and go to state 13

    declaration_list  go to state 14


state 11

    0 $accept: start $end .

    $default  accept


state 12

    2 program: program unit .

    $default  reduce using rule 2 (program)


state 13

    7 func_declaration: type_specifier ID . LPAREN parameter_list RPAREN SEMICOLON
    8                 | type_specifier ID . LPAREN RPAREN SEMICOLON
    9 func_definition: type_specifier ID . LPAREN parameter_list RPAREN compound_statement
   10                | type_specifier ID . LPAREN RPAREN compound_statement
   23 declaration_list: ID .
   24                 | ID . LTHIRD CONST_INT RTHIRD

    LPAREN  shift, and go to state 15
    LTHIRD  shift, and go to state 16

    $default  reduce using rule 23 (declaration_list)


state 14

   17 var_declaration: type_specifier declaration_list . SEMICOLON
   21 declaration_list: declaration_list . COMMA ID
   22                 | declaration_list . COMMA ID LTHIRD CONST_INT RTHIRD

    COMMA      shift, and go to state 17
    SEMICOLON  shift, and go to state 18


state 15

    7 func_declaration: type_specifier ID LPAREN . parameter_list RPAREN SEMICOLON
    8                 | type_specifier ID LPAREN . RPAREN SEMICOLON
    9 func_definition: type_specifier ID LPAREN . parameter_list RPAREN compound_statement
   10                | type_specifier ID LPAREN . RPAREN compound_statement

    INT     shift, and go to state 1
    FLOAT   shift, and go to state 2
    VOID    shift, and go to state 3
    RPAREN  shift, and go to state 19

    parameter_list  go to state 20
    type_specifier  go to state 21


state 16

   24 declaration_list: ID LTHIRD . CONST_INT RTHIRD

    CONST_INT  shift, and go to state 22


state 17

   21 declaration_list: declaration_list COMMA . ID
   22                 | declaration_list COMMA . ID LTHIRD CONST_INT RTHIRD

    ID  shift, and go to state 23


state 18

   17 var_declaration: type_specifier declaration_list SEMICOLON .

    $default  reduce using rule 17 (var_declaration)


state 19

    8 func_declaration: type_specifier ID LPAREN RPAREN . SEMICOLON
   10 func_definition: type_specifier ID LPAREN RPAREN . compound_statement

    LCURL      shift, and go to state 24
    SEMICOLON  shift, and go to state 25

    compound_statement  go to state 26


state 20

    7 func_declaration: type_specifier ID LPAREN parameter_list . RPAREN SEMICOLON
    9 func_definition: type_specifier ID LPAREN parameter_list . RPAREN compound_statement
   11 parameter_list: parameter_list . COMMA type_specifier ID
   12               | parameter_list . COMMA type_specifier

    RPAREN  shift, and go to state 27
    COMMA   shift, and go to state 28


state 21

   13 parameter_list: type_specifier . ID
   14               | type_specifier .

    ID  shift, and go to state 29

    $default  reduce using rule 14 (parameter_list)


state 22

   24 declaration_list: ID LTHIRD CONST_INT . RTHIRD

    RTHIRD  shift, and go to state 30


state 23

   21 declaration_list: declaration_list COMMA ID .
   22                 | declaration_list COMMA ID . LTHIRD CONST_INT RTHIRD

    LTHIRD  shift, and go to state 31

    $default  reduce using rule 21 (declaration_list)


state 24

   15 compound_statement: LCURL . statements RCURL
   16                   | LCURL . RCURL

    IF           shift, and go to state 32
    FOR          shift, and go to state 33
    WHILE        shift, and go to state 34
    INT          shift, and go to state 1
    FLOAT        shift, and go to state 2
    VOID         shift, and go to state 3
    RETURN       shift, and go to state 35
    PRINTLN      shift, and go to state 36
    ID           shift, and go to state 37
    CONST_INT    shift, and go to state 38
    CONST_FLOAT  shift, and go to state 39
    ADDOP        shift, and go to state 40
    NOT          shift, and go to state 41
    LPAREN       shift, and go to state 42
    LCURL        shift, and go to state 24
    RCURL        shift, and go to state 43
    SEMICOLON    shift, and go to state 44

    compound_statement    go to state 45
    var_declaration       go to state 46
    type_specifier        go to state 47
    statements            go to state 48
    statement             go to state 49
    expression_statement  go to state 50
    variable              go to state 51
    expression            go to state 52
    logic_expression      go to state 53
    rel_expression        go to state 54
    simple_expression     go to state 55
    term                  go to state 56
    unary_expression      go to state 57
    factor                go to state 58


state 25

    8 func_declaration: type_specifier ID LPAREN RPAREN SEMICOLON .

    $default  reduce using rule 8 (func_declaration)


state 26

   10 func_definition: type_specifier ID LPAREN RPAREN compound_statement .

    $default  reduce using rule 10 (func_definition)


state 27

    7 func_declaration: type_specifier ID LPAREN parameter_list RPAREN . SEMICOLON
    9 func_definition: type_specifier ID LPAREN parameter_list RPAREN . compound_statement

    LCURL      shift, and go to state 24
    SEMICOLON  shift, and go to state 59

    compound_statement  go to state 60


state 28

   11 parameter_list: parameter_list COMMA . type_specifier ID
   12               | parameter_list COMMA . type_specifier

    INT    shift, and go to state 1
    FLOAT  shift, and go to state 2
    VOID   shift, and go to state 3

    type_specifier  go to state 61


state 29

   13 parameter_list: type_specifier ID .

    $default  reduce using rule 13 (parameter_list)


state 30

   24 declaration_list: ID LTHIRD CONST_INT RTHIRD .

    $default  reduce using rule 24 (declaration_list)


state 31

   22 declaration_list: declaration_list COMMA ID LTHIRD . CONST_INT RTHIRD

    CONST_INT  shift, and go to state 62


state 32

   31 statement: IF . LPAREN expression RPAREN statement
   32          | IF . LPAREN expression RPAREN statement ELSE statement

    LPAREN  shift, and go to state 63


state 33

   30 statement: FOR . LPAREN expression_statement expression_statement expression RPAREN statement

    LPAREN  shift, and go to state 64


state 34

   33 statement: WHILE . LPAREN expression RPAREN statement

    LPAREN  shift, and go to state 65


state 35

   35 statement: RETURN . expression SEMICOLON

    ID           shift, and go to state 37
    CONST_INT    shift, and go to state 38
    CONST_FLOAT  shift, and go to state 39
    ADDOP        shift, and go to state 40
    NOT          shift, and go to state 41
    LPAREN       shift, and go to state 42

    variable           go to state 51
    expression         go to state 66
    logic_expression   go to state 53
    rel_expression     go to state 54
    simple_expression  go to state 55
    term               go to state 56
    unary_expression   go to state 57
    factor             go to state 58


state 36

   34 statement: PRINTLN . LPAREN ID RPAREN SEMICOLON

    LPAREN  shift, and go to state 67


state 37

   38 variable: ID .
   39         | ID . LTHIRD expression RTHIRD
   54 factor: ID . LPAREN argument_list RPAREN

    LPAREN  shift, and go to state 68
    LTHIRD  shift, and go to state 69

    $default  reduce using rule 38 (variable)


state 38

   56 factor: CONST_INT .

    $default  reduce using rule 56 (factor)


state 39

   57 factor: CONST_FLOAT .

    $default  reduce using rule 57 (factor)


state 40

   50 unary_expression: ADDOP . unary_expression

    ID           shift, and go to state 37
    CONST_INT    shift, and go to state 38
    CONST_FLOAT  shift, and go to state 39
    ADDOP        shift, and go to state 40
    NOT          shift, and go to state 41
    LPAREN       shift, and go to state 42

    variable          go to state 70
    unary_expression  go to state 71
    factor            go to state 58


state 41

   51 unary_expression: NOT . unary_expression

    ID           shift, and go to state 37
    CONST_INT    shift, and go to state 38
    CONST_FLOAT  shift, and go to state 39
    ADDOP        shift, and go to state 40
    NOT          shift, and go to state 41
    LPAREN       shift, and go to state 42

    variable          go to state 70
    unary_expression  go to state 72
    factor            go to state 58


state 42

   55 factor: LPAREN . expression RPAREN

    ID           shift, and go to state 37
    CONST_INT    shift, and go to state 38
    CONST_FLOAT  shift, and go to state 39
    ADDOP        shift, and go to state 40
    NOT          shift, and go to state 41
    LPAREN       shift, and go to state 42

    variable           go to state 51
    expression         go to state 73
    logic_expression   go to state 53
    rel_expression     go to state 54
    simple_expression  go to state 55
    term               go to state 56
    unary_expression   go to state 57
    factor             go to state 58


state 43

   16 compound_statement: LCURL RCURL .

    $default  reduce using rule 16 (compound_statement)


state 44

   36 expression_statement: SEMICOLON .

    $default  reduce using rule 36 (expression_statement)


state 45

   29 statement: compound_statement .

    $default  reduce using rule 29 (statement)


state 46

   27 statement: var_declaration .

    $default  reduce using rule 27 (statement)


state 47

   17 var_declaration: type_specifier . declaration_list SEMICOLON

    ID  shift, and go to state 74

    declaration_list  go to state 14


state 48

   15 compound_statement: LCURL statements . RCURL
   26 statements: statements . statement

    IF           shift, and go to state 32
    FOR          shift, and go to state 33
    WHILE        shift, and go to state 34
    INT          shift, and go to state 1
    FLOAT        shift, and go to state 2
    VOID         shift, and go to state 3
    RETURN       shift, and go to state 35
    PRINTLN      shift, and go to state 36
    ID           shift, and go to state 37
    CONST_INT    shift, and go to state 38
    CONST_FLOAT  shift, and go to state 39
    ADDOP        shift, and go to state 40
    NOT          shift, and go to state 41
    LPAREN       shift, and go to state 42
    LCURL        shift, and go to state 24
    RCURL        shift, and go to state 75
    SEMICOLON    shift, and go to state 44

    compound_statement    go to state 45
    var_declaration       go to state 46
    type_specifier        go to state 47
    statement             go to state 76
    expression_statement  go to state 50
    variable              go to state 51
    expression            go to state 52
    logic_expression      go to state 53
    rel_expression        go to state 54
    simple_expression     go to state 55
    term                  go to state 56
    unary_expression      go to state 57
    factor                go to state 58


state 49

   25 statements: statement .

    $default  reduce using rule 25 (statements)


state 50

   28 statement: expression_statement .

    $default  reduce using rule 28 (statement)


state 51

   41 expression: variable . ASSIGNOP logic_expression
   53 factor: variable .
   58       | variable . INCOP
   59       | variable . DECOP

    INCOP     shift, and go to state 77
    DECOP     shift, and go to state 78
    ASSIGNOP  shift, and go to state 79

    $default  reduce using rule 53 (factor)


state 52

   37 expression_statement: expression . SEMICOLON

    SEMICOLON  shift, and go to state 80


state 53

   40 expression: logic_expression .

    $default  reduce using rule 40 (expression)


state 54

   42 logic_expression: rel_expression .
   43                 | rel_expression . LOGICOP rel_expression

    LOGICOP  shift, and go to state 81

    $default  reduce using rule 42 (logic_expression)


state 55

   44 rel_expression: simple_expression .
   45               | simple_expression . RELOP simple_expression
   47 simple_expression: simple_expression . ADDOP term

    ADDOP  shift, and go to state 82
    RELOP  shift, and go to state 83

    $default  reduce using rule 44 (rel_expression)


state 56

   46 simple_expression: term .
   49 term: term . MULOP unary_expression

    MULOP  shift, and go to state 84

    $default  reduce using rule 46 (simple_expression)


state 57

   48 term: unary_expression .

    $default  reduce using rule 48 (term)


state 58

   52 unary_expression: factor .

    $default  reduce using rule 52 (unary_expression)


state 59

    7 func_declaration: type_specifier ID LPAREN parameter_list RPAREN SEMICOLON .

    $default  reduce using rule 7 (func_declaration)


state 60

    9 func_definition: type_specifier ID LPAREN parameter_list RPAREN compound_statement .

    $default  reduce using rule 9 (func_definition)


state 61

   11 parameter_list: parameter_list COMMA type_specifier . ID
   12               | parameter_list COMMA type_specifier .

    ID  shift, and go to state 85

    $default  reduce using rule 12 (parameter_list)


state 62

   22 declaration_list: declaration_list COMMA ID LTHIRD CONST_INT . RTHIRD

    RTHIRD  shift, and go to state 86


state 63

   31 statement: IF LPAREN . expression RPAREN statement
   32          | IF LPAREN . expression RPAREN statement ELSE statement

    ID           shift, and go to state 37
    CONST_INT    shift, and go to state 38
    CONST_FLOAT  shift, and go to state 39
    ADDOP        shift, and go to state 40
    NOT          shift, and go to state 41
    LPAREN       shift, and go to state 42

    variable           go to state 51
    expression         go to state 87
    logic_expression   go to state 53
    rel_expression     go to state 54
    simple_expression  go to state 55
    term               go to state 56
    unary_expression   go to state 57
    factor             go to state 58


state 64

   30 statement: FOR LPAREN . expression_statement expression_statement expression RPAREN statement

    ID           shift, and go to state 37
    CONST_INT    shift, and go to state 38
    CONST_FLOAT  shift, and go to state 39
    ADDOP        shift, and go to state 40
    NOT          shift, and go to state 41
    LPAREN       shift, and go to state 42
    SEMICOLON    shift, and go to state 44

    expression_statement  go to state 88
    variable              go to state 51
    expression            go to state 52
    logic_expression      go to state 53
    rel_expression        go to state 54
    simple_expression     go to state 55
    term                  go to state 56
    unary_expression      go to state 57
    factor                go to state 58


state 65

   33 statement: WHILE LPAREN . expression RPAREN statement

    ID           shift, and go to state 37
    CONST_INT    shift, and go to state 38
    CONST_FLOAT  shift, and go to state 39
    ADDOP        shift, and go to state 40
    NOT          shift, and go to state 41
    LPAREN       shift, and go to state 42

    variable           go to state 51
    expression         go to state 89
    logic_expression   go to state 53
    rel_expression     go to state 54
    simple_expression  go to state 55
    term               go to state 56
    unary_expression   go to state 57
    factor             go to state 58


state 66

   35 statement: RETURN expression . SEMICOLON

    SEMICOLON  shift, and go to state 90


state 67

   34 statement: PRINTLN LPAREN . ID RPAREN SEMICOLON

    ID  shift, and go to state 91


state 68

   54 factor: ID LPAREN . argument_list RPAREN

    ID           shift, and go to state 37
    CONST_INT    shift, and go to state 38
    CONST_FLOAT  shift, and go to state 39
    ADDOP        shift, and go to state 40
    NOT          shift, and go to state 41
    LPAREN       shift, and go to state 42

    $default  reduce using rule 61 (argument_list)

    variable           go to state 70
    logic_expression   go to state 92
    rel_expression     go to state 54
    simple_expression  go to state 55
    term               go to state 56
    unary_expression   go to state 57
    factor             go to state 58
    argument_list      go to state 93
    arguments          go to state 94


state 69

   39 variable: ID LTHIRD . expression RTHIRD

    ID           shift, and go to state 37
    CONST_INT    shift, and go to state 38
    CONST_FLOAT  shift, and go to state 39
    ADDOP        shift, and go to state 40
    NOT          shift, and go to state 41
    LPAREN       shift, and go to state 42

    variable           go to state 51
    expression         go to state 95
    logic_expression   go to state 53
    rel_expression     go to state 54
    simple_expression  go to state 55
    term               go to state 56
    unary_expression   go to state 57
    factor             go to state 58


state 70

   53 factor: variable .
   58       | variable . INCOP
   59       | variable . DECOP

    INCOP  shift, and go to state 77
    DECOP  shift, and go to state 78

    $default  reduce using rule 53 (factor)


state 71

   50 unary_expression: ADDOP unary_expression .

    $default  reduce using rule 50 (unary_expression)


state 72

   51 unary_expression: NOT unary_expression .

    $default  reduce using rule 51 (unary_expression)


state 73

   55 factor: LPAREN expression . RPAREN

    RPAREN  shift, and go to state 96


state 74

   23 declaration_list: ID .
   24                 | ID . LTHIRD CONST_INT RTHIRD

    LTHIRD  shift, and go to state 16

    $default  reduce using rule 23 (declaration_list)


state 75

   15 compound_statement: LCURL statements RCURL .

    $default  reduce using rule 15 (compound_statement)


state 76

   26 statements: statements statement .

    $default  reduce using rule 26 (statements)


state 77

   58 factor: variable INCOP .

    $default  reduce using rule 58 (factor)


state 78

   59 factor: variable DECOP .

    $default  reduce using rule 59 (factor)


state 79

   41 expression: variable ASSIGNOP . logic_expression

    ID           shift, and go to state 37
    CONST_INT    shift, and go to state 38
    CONST_FLOAT  shift, and go to state 39
    ADDOP        shift, and go to state 40
    NOT          shift, and go to state 41
    LPAREN       shift, and go to state 42

    variable           go to state 70
    logic_expression   go to state 97
    rel_expression     go to state 54
    simple_expression  go to state 55
    term               go to state 56
    unary_expression   go to state 57
    factor             go to state 58


state 80

   37 expression_statement: expression SEMICOLON .

    $default  reduce using rule 37 (expression_statement)


state 81

   43 logic_expression: rel_expression LOGICOP . rel_expression

    ID           shift, and go to state 37
    CONST_INT    shift, and go to state 38
    CONST_FLOAT  shift, and go to state 39
    ADDOP        shift, and go to state 40
    NOT          shift, and go to state 41
    LPAREN       shift, and go to state 42

    variable           go to state 70
    rel_expression     go to state 98
    simple_expression  go to state 55
    term               go to state 56
    unary_expression   go to state 57
    factor             go to state 58


state 82

   47 simple_expression: simple_expression ADDOP . term

    ID           shift, and go to state 37
    CONST_INT    shift, and go to state 38
    CONST_FLOAT  shift, and go to state 39
    ADDOP        shift, and go to state 40
    NOT          shift, and go to state 41
    LPAREN       shift, and go to state 42

    variable          go to state 70
    term              go to state 99
    unary_expression  go to state 57
    factor            go to state 58


state 83

   45 rel_expression: simple_expression RELOP . simple_expression

    ID           shift, and go to state 37
    CONST_INT    shift, and go to state 38
    CONST_FLOAT  shift, and go to state 39
    ADDOP        shift, and go to state 40
    NOT          shift, and go to state 41
    LPAREN       shift, and go to state 42

    variable           go to state 70
    simple_expression  go to state 100
    term               go to state 56
    unary_expression   go to state 57
    factor             go to state 58


state 84

   49 term: term MULOP . unary_expression

    ID           shift, and go to state 37
    CONST_INT    shift, and go to state 38
    CONST_FLOAT  shift, and go to state 39
    ADDOP        shift, and go to state 40
    NOT          shift, and go to state 41
    LPAREN       shift, and go to state 42

    variable          go to state 70
    unary_expression  go to state 101
    factor            go to state 58


state 85

   11 parameter_list: parameter_list COMMA type_specifier ID .

    $default  reduce using rule 11 (parameter_list)


state 86

   22 declaration_list: declaration_list COMMA ID LTHIRD CONST_INT RTHIRD .

    $default  reduce using rule 22 (declaration_list)


state 87

   31 statement: IF LPAREN expression . RPAREN statement
   32          | IF LPAREN expression . RPAREN statement ELSE statement

    RPAREN  shift, and go to state 102


state 88

   30 statement: FOR LPAREN expression_statement . expression_statement expression RPAREN statement

    ID           shift, and go to state 37
    CONST_INT    shift, and go to state 38
    CONST_FLOAT  shift, and go to state 39
    ADDOP        shift, and go to state 40
    NOT          shift, and go to state 41
    LPAREN       shift, and go to state 42
    SEMICOLON    shift, and go to state 44

    expression_statement  go to state 103
    variable              go to state 51
    expression            go to state 52
    logic_expression      go to state 53
    rel_expression        go to state 54
    simple_expression     go to state 55
    term                  go to state 56
    unary_expression      go to state 57
    factor                go to state 58


state 89

   33 statement: WHILE LPAREN expression . RPAREN statement

    RPAREN  shift, and go to state 104


state 90

   35 statement: RETURN expression SEMICOLON .

    $default  reduce using rule 35 (statement)


state 91

   34 statement: PRINTLN LPAREN ID . RPAREN SEMICOLON

    RPAREN  shift, and go to state 105


state 92

   63 arguments: logic_expression .

    $default  reduce using rule 63 (arguments)


state 93

   54 factor: ID LPAREN argument_list . RPAREN

    RPAREN  shift, and go to state 106


state 94

   60 argument_list: arguments .
   62 arguments: arguments . COMMA logic_expression

    COMMA  shift, and go to state 107

    $default  reduce using rule 60 (argument_list)


state 95

   39 variable: ID LTHIRD expression . RTHIRD

    RTHIRD  shift, and go to state 108


state 96

   55 factor: LPAREN expression RPAREN .

    $default  reduce using rule 55 (factor)


state 97

   41 expression: variable ASSIGNOP logic_expression .

    $default  reduce using rule 41 (expression)


state 98

   43 logic_expression: rel_expression LOGICOP rel_expression .

    $default  reduce using rule 43 (logic_expression)


state 99

   47 simple_expression: simple_expression ADDOP term .
   49 term: term . MULOP unary_expression

    MULOP  shift, and go to state 84

    $default  reduce using rule 47 (simple_expression)


state 100

   45 rel_expression: simple_expression RELOP simple_expression .
   47 simple_expression: simple_expression . ADDOP term

    ADDOP  shift, and go to state 82

    $default  reduce using rule 45 (rel_expression)


state 101

   49 term: term MULOP unary_expression .

    $default  reduce using rule 49 (term)


state 102

   31 statement: IF LPAREN expression RPAREN . statement
   32          | IF LPAREN expression RPAREN . statement ELSE statement

    IF           shift, and go to state 32
    FOR          shift, and go to state 33
    WHILE        shift, and go to state 34
    INT          shift, and go to state 1
    FLOAT        shift, and go to state 2
    VOID         shift, and go to state 3
    RETURN       shift, and go to state 35
    PRINTLN      shift, and go to state 36
    ID           shift, and go to state 37
    CONST_INT    shift, and go to state 38
    CONST_FLOAT  shift, and go to state 39
    ADDOP        shift, and go to state 40
    NOT          shift, and go to state 41
    LPAREN       shift, and go to state 42
    LCURL        shift, and go to state 24
    SEMICOLON    shift, and go to state 44

    compound_statement    go to state 45
    var_declaration       go to state 46
    type_specifier        go to state 47
    statement             go to state 109
    expression_statement  go to state 50
    variable              go to state 51
    expression            go to state 52
    logic_expression      go to state 53
    rel_expression        go to state 54
    simple_expression     go to state 55
    term                  go to state 56
    unary_expression      go to state 57
    factor                go to state 58


state 103

   30 statement: FOR LPAREN expression_statement expression_statement . expression RPAREN statement

    ID           shift, and go to state 37
    CONST_INT    shift, and go to state 38
    CONST_FLOAT  shift, and go to state 39
    ADDOP        shift, and go to state 40
    NOT          shift, and go to state 41
    LPAREN       shift, and go to state 42

    variable           go to state 51
    expression         go to state 110
    logic_expression   go to state 53
    rel_expression     go to state 54
    simple_expression  go to state 55
    term               go to state 56
    unary_expression   go to state 57
    factor             go to state 58


state 104

   33 statement: WHILE LPAREN expression RPAREN . statement

    IF           shift, and go to state 32
    FOR          shift, and go to state 33
    WHILE        shift, and go to state 34
    INT          shift, and go to state 1
    FLOAT        shift, and go to state 2
    VOID         shift, and go to state 3
    RETURN       shift, and go to state 35
    PRINTLN      shift, and go to state 36
    ID           shift, and go to state 37
    CONST_INT    shift, and go to state 38
    CONST_FLOAT  shift, and go to state 39
    ADDOP        shift, and go to state 40
    NOT          shift, and go to state 41
    LPAREN       shift, and go to state 42
    LCURL        shift, and go to state 24
    SEMICOLON    shift, and go to state 44

    compound_statement    go to state 45
    var_declaration       go to state 46
    type_specifier        go to state 47
    statement             go to state 111
    expression_statement  go to state 50
    variable              go to state 51
    expression            go to state 52
    logic_expression      go to state 53
    rel_expression        go to state 54
    simple_expression     go to state 55
    term                  go to state 56
    unary_expression      go to state 57
    factor                go to state 58


state 105

   34 statement: PRINTLN LPAREN ID RPAREN . SEMICOLON

    SEMICOLON  shift, and go to state 112


state 106

   54 factor: ID LPAREN argument_list RPAREN .

    $default  reduce using rule 54 (factor)


state 107

   62 arguments: arguments COMMA . logic_expression

    ID           shift, and go to state 37
    CONST_INT    shift, and go to state 38
    CONST_FLOAT  shift, and go to state 39
    ADDOP        shift, and go to state 40
    NOT          shift, and go to state 41
    LPAREN       shift, and go to state 42

    variable           go to state 70
    logic_expression   go to state 113
    rel_expression     go to state 54
    simple_expression  go to state 55
    term               go to state 56
    unary_expression   go to state 57
    factor             go to state 58


state 108

   39 variable: ID LTHIRD expression RTHIRD .

    $default  reduce using rule 39 (variable)


state 109

   31 statement: IF LPAREN expression RPAREN statement .
   32          | IF LPAREN expression RPAREN statement . ELSE statement

    ELSE  shift, and go to state 114

    $default  reduce using rule 31 (statement)


state 110

   30 statement: FOR LPAREN expression_statement expression_statement expression . RPAREN statement

    RPAREN  shift, and go to state 115


state 111

   33 statement: WHILE LPAREN expression RPAREN statement .

    $default  reduce using rule 33 (statement)


state 112

   34 statement: PRINTLN LPAREN ID RPAREN SEMICOLON .

    $default  reduce using rule 34 (statement)


state 113

   62 arguments: arguments COMMA logic_expression .

    $default  reduce using rule 62 (arguments)


state 114

   32 statement: IF LPAREN expression RPAREN statement ELSE . statement

    IF           shift, and go to state 32
    FOR          shift, and go to state 33
    WHILE        shift, and go to state 34
    INT          shift, and go to state 1
    FLOAT        shift, and go to state 2
    VOID         shift, and go to state 3
    RETURN       shift, and go to state 35
    PRINTLN      shift, and go to state 36
    ID           shift, and go to state 37
    CONST_INT    shift, and go to state 38
    CONST_FLOAT  shift, and go to state 39
    ADDOP        shift, and go to state 40
    NOT          shift, and go to state 41
    LPAREN       shift, and go to state 42
    LCURL        shift, and go to state 24
    SEMICOLON    shift, and go to state 44

    compound_statement    go to state 45
    var_declaration       go to state 46
    type_specifier        go to state 47
    statement             go to state 116
    expression_statement  go to state 50
    variable              go to state 51
    expression            go to state 52
    logic_expression      go to state 53
    rel_expression        go to state 54
    simple_expression     go to state 55
    term                  go to state 56
    unary_expression      go to state 57
    factor                go to state 58


state 115

   30 statement: FOR LPAREN expression_statement expression_statement expression RPAREN . statement

    IF           shift, and go to state 32
    FOR          shift, and go to state 33
    WHILE        shift, and go to state 34
    INT          shift, and go to state 1
    FLOAT        shift, and go to state 2
    VOID         shift, and go to state 3
    RETURN       shift, and go to state 35
    PRINTLN      shift, and go to state 36
    ID           shift, and go to state 37
    CONST_INT    shift, and go to state 38
    CONST_FLOAT  shift, and go to state 39
    ADDOP        shift, and go to state 40
    NOT          shift, and go to state 41
    LPAREN       shift, and go to state 42
    LCURL        shift, and go to state 24
    SEMICOLON    shift, and go to state 44

    compound_statement    go to state 45
    var_declaration       go to state 46
    type_specifier        go to state 47
    statement             go to state 117
    expression_statement  go to state 50
    variable              go to state 51
    expression            go to state 52
    logic_expression      go to state 53
    rel_expression        go to state 54
    simple_expression     go to state 55
    term                  go to state 56
    unary_expression      go to state 57
    factor                go to state 58


state 116

   32 statement: IF LPAREN expression RPAREN statement ELSE statement .

    $default  reduce using rule 32 (statement)


state 117

   30 statement: FOR LPAREN expression_statement expression_statement expression RPAREN statement .

    $default  reduce using rule 30 (statement)
